hack to submit move

--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@
       </main>
 
       <div id="fab" class="mdl-button mdl-js-button mdl-button--fab mdl-button--colored">
-        <i class="material-icons play">&#xE037;</i>
-        <i class="material-icons edit">&#xE254;</i>
+        <i class="material-icons edit">send</i>
         <i class="material-icons error">&#xE000;</i>
       </div>
 
