disable 'send' button when illegal. Add 'undo' button

--- a/index.html
+++ b/index.html
@@ -89,9 +89,10 @@
 
       <div id="fab" class="mdl-button mdl-js-button mdl-button--fab mdl-button--colored">
         <i class="material-icons edit">send</i>
-        <i class="material-icons error">&#xE000;</i>
       </div>
-
+      <div id="fab2" class="mdl-button mdl-js-button mdl-button--fab mdl-button--colored">
+        <i class="material-icons edit">undo</i>
+      </div>
     </div>
 
   </body>
